# PicoMinimalTest

./: CMakeLists.txt  Dockerfile  Makefile  README-ZH.md  README.md  build.bat  build.sh  pico_sdk_import.cmake
src/: CMakeLists.txt  buzzer.c  buzzer.h  display_spi.c  display_spi.h  fb_pixel.h  framebuffer.c  framebuffer.h  gfx.c  gfx.h  hal_types.h  ili9341.c  ili9341.h  ili9488.c  ili9488.h  input.c  input.h  joystick.c  joystick.h  main.c  pins.h  rgbled.c  rgbled.h  touch.c  touch.h  ws2812.pio
